# simdcsv

./: .gitignore  Cargo.toml  README.md  download_clickbench.sh  download_github_issues.py  majestic_million.csv  profile.sh
.cargo/: config.toml
.github/workflows/: tests.yml
benches/: parallel.rs  parse.rs
src/: arrow.rs  classifier.rs  classify.rs  clickbench.rs  decoder.rs  lib.rs  main.rs  monoid.rs  parallel_csv_opener.rs  partition.rs  read.rs  reader.rs  reader_builder.rs  simd.rs  u8x16.rs
tests/: correctness.rs  taxi_zone.rs
