[package]
name = "arrow-csv2"
authors = ["Matthew Kim"]
version = "0.1.0"
edition = "2024"
description = "A CSV parser"
default-run = "arrow-csv2"
license = "Apache 2.0"

[dependencies]
arrow-schema = "55"
arrow-array = "55"
arrow-buffer = "55"
arrow-cast = "55"
simdutf8 = "0.1.5"
atoi = "2.0.0"

[dev-dependencies]
insta = "1.46.3"
criterion = "0.8.2"
arrow-csv = "55"

[[bin]]
name = "slice_clickbench"
path = "bin/slice_clickbench.rs"

[[bin]]
name = "parse_hits_100"
path = "bin/parse_hits_100.rs"

[[bench]]
name = "parse"
harness = false

[profile.release]
debug = 2
# lto = "fat"
panic = "abort"
codegen-units = 1
